# cosmicsnip

./: .gitignore  ARCHITECTURE.md  AUDIT_PROPOSAL.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_AUDIT_LOG.md  SECURITY.md  app.py  build-deb.sh  capture.py  editor.py  install.sh  overlay.py  pyproject.toml  requirements-maintainability.txt
.github/workflows/: security.yml
cosmicsnip/: __init__.py  app.py  capture.py  clipboard.py  config.py  editor.py  log.py  monitors.py  overlay.py  security.py  tray.py
data/: io.github.itssoup.CosmicSnip-autostart.desktop  io.github.itssoup.CosmicSnip.desktop  io.github.itssoup.CosmicSnip.metainfo.xml
data/screenshots/: README.md
debian/: changelog  control  copyright  install
scripts/: audit-maintainability.sh
